--- a/src/styles/__home_slide.scss
+++ b/src/styles/__home_slide.scss
@@ -25,8 +25,36 @@
 
 .subjumboElements{
     padding-bottom: 20px;
+    display: flex;
+    flex-direction: row;
 }
 
+.rightItem-jumbo{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 4%;
+}
+
+//team svg icons 
 .team-icon{
-    height: 65px;
+    height: 60px;   
+}
+//colors for the svg logo
+.colorType1{
+    .cls-1{
+        stroke: var(--CCRedTintForNav);
+    }
+    .cls-2{
+        stroke: var(--CCRed);
+    }
+}
+.colorType2{
+    .cls-2{
+        stroke: var(--CCRedTintForNav);
+    }
+    .cls-1{
+        stroke: var(--CCRed);
+    }
 }
